# island_model

./: .gitignore  CMakeLists.txt  island_model_analysis.R  island_model_bindings.R  island_model_plotting.R  lattice_bindings.R  run.sh
src/: main.cpp
src/analysis/: convergence.hpp  divergence_test.cpp  memory_profile.cpp  metrics.hpp  time_bookkeeping.hpp
src/config/: default_grid.hpp  parameter_grid.hpp
src/core/: ids.hpp
src/dynamics/: migration.hpp  simulator.hpp  transition_kernel.hpp  visibility.hpp  weights.hpp
src/io/: write_equilibrium_csv.hpp  write_run_parameters_csv.hpp  write_time_bookkeeping_csv.hpp
src/model/: lattice.hpp  payoff_landscape.hpp  prerequisites.hpp  repertoire_payoff_cache.hpp
src/rcpp/: island_model_bindings.cpp
src/state/: population_state.hpp
src/state_space/: reachable_states.hpp  repertoire.hpp
